home and works completed

--- a/views/home.html
+++ b/views/home.html
@@ -4,9 +4,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/style.css">
   <title>Home</title>
+  <link href="//fonts.googleapis.com/css?family=Roboto|Open+Sans:200,300,400,700,800,900&amp;subset=latin" rel="preload" as="font">
 </head>
 <body>
-  <h1>hey this is home</h1>
+  
+  <div class="container">
+    
+    <nav class="navbar">
+      <h1>Who am I</h1>
+      <p>The elevator to success is out of order. You'll have to use the stairs, one step at a time.</p>
+    </nav>
+
+    <div class="main">
+      <article>
+        El matrimonio Ramírez está espachurrado en el sofá, viendo la televisión, él, con camiseta de tirantes y una lata de cerveza en la mano, ella, con bata de boitiné, con los rulos puestos.
+        - Pedro, ¡hace treinta años que estamos casados y nunca me has comprado nada!.
+        - Mujer, no sabía que vendieras algo...
+      </article>  
+      <div class="picture">
+        <img src="/images/cool-cat.jpg" alt="Francesco">
+      </div>
+    </div>
+
+    <footer>
+      <a href="/works">work</a>
+      <a href="/about">about</a>
+    </footer>
+  </div>
+  
 </body>
 </html>
