--- a/views/works.html
+++ b/views/works.html
@@ -4,9 +4,42 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>works</title>
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/works.css">
+  <title>WORKS</title>
+  <link href="//fonts.googleapis.com/css?family=Roboto|Open+Sans:200,300,400,700,800,900&amp;subset=latin" rel="preload" as="font">
 </head>
 <body>
-  <h1>this is works</h1>
+  <div class="container">
+    <h1>Works, jobs and other boring stuff</h1>
+    <div class="main">
+      <section class="one">Look, that's just a fact. Job descriptions are dull to read, dull to write, and dull to look at. <br> <br> They're almost always made up of blocks of black words on a white page, the text squeezed onto a single A4 side (even though no one is ever going to print one off), with as many buzz words and marketing speak as can be jammed in. </section>
+      <section class="two">The 10 Most Boring Jobs in the World (Apparently)
+        <br>
+        <br>
+        <li>Frozen Pea Tester</li>
+        <li>Bookmark String Threader</li>
+        <li>Print Paper Feeder</li>
+        <li>Lift Operator</li>
+        <li>Milk Bottle Squeezer</li>
+        <li>Cheese Slicer</li>
+        <li>Tablet Picker</li>
+        <li>Fax Operator</li>
+        <li>Label Sticker</li>
+        <li>Stapler</li>
+      </section>
+      <section>According to Guinness World Records, the first person to be charged with speeding was Walter Arnold of the English village of Paddock Wood, Kent. <br> <br> On Jan. 28, 1896, Arnold was spotted going four times the speed limit in his 19th-century Benz—but since the speed limit at the time was just two miles per hour, that meant he was not going too fast by today's standards. <br> The constable had to chase him down on his bicycle, issuing a ticket for £4 and earning Arnold the speedy distinction</section>
+    </div>
+    <div class="picture">
+        <img src="/images/funny-cat.jpg" alt="funny">
+    </div>
+
+    <footer>
+        <a href="/">home</a>
+        <a href="/about">about</a>
+    </footer>
+    
+  </div>
+  
 </body>
 </html>
