--- a/views/about.html
+++ b/views/about.html
@@ -4,9 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/about.css">
   <title>About</title>
 </head>
 <body>
-  <h1>about me</h1>
+  <div class="container">
+    <h1>about me</h1>
+    <div class="hobbies">
+      <div><img src="/images/jiu.jpeg" alt="Jiu Jitsu"> <p> The BJJ story begins in Japan, it was developed for use on the field of battle by Japanese samurai. These warriors, who engaged in armed battles on horseback, developed Jiu-Jitsu as the last line of defense in the event that they found themselves disarmed and afoot</p></div>
+      <div><img src="/images/travel.jpeg" alt="Travel"> <p>The border between the Syrian Arab Republic and the Republic of Turkey is about 909 kilometres (565 mi) long, and runs from the Mediterranean Sea in the west to the tripoint with Iraq in the east.</p></div>
+      <div><img src="/images/cats.jpeg" alt="Cats"> <p>I am the Open Arms for Cats, I volounteer in an association in my town which rescues stray cats. I live with 2 cats at my place at the moment. </p></div>
+    </div>
+  </div>
+  
+
+  <footer>
+    <a href="/">home</a>
+    <a href="/works">works</a>
+  </footer>
 </body>
 </html>
